Adicionando arquivos news

--- a/index.html
+++ b/index.html
@@ -4,12 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/home.css">
+
     <link rel="icon" href="./assets/icons/Naped.svg">
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100..900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     <title>NAPED</title>
 </head>
 
@@ -25,7 +22,7 @@
             <div class="divNapedHeader">
                 <nav class="navHeader open">
                     <ul>
-                        <li><a href="#">Home</a></li>
+                        <li><a href="./index.html">Home</a></li>
                         <li><a href="#">Séries</a></li>
                         <li><a href="#">Filmes</a></li>
                         <li><a href="#">Animes</a></li>
@@ -41,16 +38,16 @@
     </header>
 
 
-    <main>
-        <div class="titleBanner container-grid">
+    <main class="container-grid">
+        <div class="titleBanner">
             <h1>Mundo nerd? Naped</h1>
             <p>O Naped pode ser sua fonte de informações sobre o mundo nerd e outros assuntos relacionados.</p>
         </div>
 
-        <section class="napedBanner container-grid">
+        <section class="napedBanner">
 
             <div class="banner">
-                <button>Lorem</button>
+                <button class="buttonBanner">Lorem</button>
 
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus, malesuada et velit in, blandit molestie dolor.</p>
             </div>
@@ -70,7 +67,7 @@
             </div>
         </section>
 
-        <section class=" containerNapedMain container-grid">
+        <section class=" containerNapedMain">
             <section class="napedMain">
                 <article class="napedArticle">
                     <div class="divNapedArticle imgNaped1">
@@ -280,7 +277,7 @@
             </section>
         </section>
 
-        <section class="containerPageFooter container-grid">
+        <section class="containerPageFooter">
             <h1>Notícias mais recentes</h1>
 
             <hr>
@@ -288,7 +285,7 @@
             <section class="pageFooter">
                 <div class="divPageFooter imgPageFooter1">
                     <button class="buttonSmallBanner">Lorem</button>
-                    <p class="textSmallBanner">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus, malesuada et velit in, blandit molestie dolor.</p>
+                    <p class="textSmallBanner"><a href="./news.html">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eros tellus, malesuada et velit in, blandit molestie dolor.</a></p>
                 </div>
 
                 <div class="divPageFooter imgPageFooter2">
